Fixed some wording on about, added contact page

--- a/about.html
+++ b/about.html
@@ -37,16 +37,19 @@
                 </div>
                 <div class="col-sm-9">
                     <div class="row" style="margin-bottom:0;">
-                        <div class="col-sm-6"></div>
-                    <div class="col-sm-2 nav-tab" id="divHome">
-                        <a href="index.html"><input type="button" id="btnHome" value="Home"></a>
-                    </div>
-                    <div class="col-sm-2 nav-tab-selected">
-                        <a href="about.html"><input type="button" id="btnAbout" value="About"></a>
-                    </div>
-                    <div class="col-sm-2 nav-tab">
-                        <a href="portfolio.html"><input type="button" id="btnPortfolio" value="Work"></a>
-                    </div>
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-2 nav-tab" id="divHome">
+                            <a href="index.html"><input type="button" id="btnHome" value="Home"></a>
+                        </div>
+                        <div class="col-sm-2 nav-tab-selected">
+                            <a href="about.html"><input type="button" id="btnAbout" value="About"></a>
+                        </div>
+                        <div class="col-sm-2 nav-tab">
+                            <a href="portfolio.html"><input type="button" id="btnPortfolio" value="Work"></a>
+                        </div>
+                        <div class="col-sm-2 nav-tab">
+                            <a href="contact.html"><input type="button" id="btnPortfolio" value="Contact Me"></a>
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -77,11 +80,12 @@
                         I am extremely passionate about building quality software following solid object-oriented design
                         for
                         ease of future use
-                        and development.
+                        and development. If you'd like to get in touch, you can find ways to reach me on the <a
+                            href="contact.html"> Contact Me</a> section of this site.
                     </p>
 
-                    <h3>Contact Me:</h3>
-                    <p>Phone: (289) 228-1888 &nbsp;&nbsp;&nbsp;&nbsp; Email: jahare@live.ca </p>
+                    <h3>Preffered Contacts:</h3>
+                    <b>Phone: (289) 228-1888 &nbsp;&nbsp;&nbsp;&nbsp; <br>Email: jahare@live.ca </b>
                     <p></p>
                 </div>
 
@@ -101,10 +105,10 @@
                 <p>
                     During my second and third terms I was hired by the college as a peer tutor for a number of classes
                     and helped over a dozen
-                    students to understand difficult concepts in C#, Javascript, and Python.
+                    students to understand difficult concepts in C#, Javascript, and T-SQL development.
                 </p>
                 <p>
-                    Surprisingly, to me at least, this was immensely helpful for my own learning as well, as it forced
+                    This was immensely helpful for my own learning as well, as it forced
                     me to
                     research simpler topics that
                     might have been skimmed over otherwise. Additionally, it gave me extra practice programming simple
