--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-sm-9">
                 <div class="row" style="margin-bottom:0;">
-                    <div class="col-sm-6"></div>
+                    <div class="col-sm-4"></div>
                     <div class="col-sm-2 nav-tab-selected" id="divHome">
                         <a href="index.html"><input type="button" id="btnHome" value="Home"></a>
                     </div>
@@ -48,6 +48,9 @@
                     </div>
                     <div class="col-sm-2 nav-tab">
                         <a href="portfolio.html"><input type="button" id="btnPortfolio" value="Work"></a>
+                    </div>
+                    <div class="col-sm-2 nav-tab">
+                        <a href="contact.html"><input type="button" id="btnPortfolio" value="Contact Me"></a>
                     </div>
                 </div>
             </div>
