--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
             </div>
             <div class="col-sm-9">
                 <div class="row" style="margin-bottom:0;">
-                    <div class="col-sm-6"></div>
+                    <div class="col-sm-4"></div>
                     <div class="col-sm-2 nav-tab" id="divHome">
                         <a href="index.html"><input type="button" id="btnHome" value="Home"></a>
                     </div>
@@ -45,6 +45,9 @@
                     </div>
                     <div class="col-sm-2 nav-tab-selected">
                         <a href="portfolio.html"><input type="button" id="btnPortfolio" value="Work"></a>
+                    </div>
+                    <div class="col-sm-2 nav-tab">
+                        <a href="contact.html"><input type="button" id="btnPortfolio" value="Contact Me"></a>
                     </div>
                 </div>
             </div>
@@ -70,7 +73,7 @@
                     any work with multithreading, which was difficult at first but enjoyable to work through.
                 </p>
                 <p>
-                    
+
                 </p>
                 <p>
                     <b>Skills used:</b> Java, TCP/IP networking, organization
