changed wording on Work page

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
         <hr>
         <!-- THIS SITE  -->
         <div class="row">
-            <h2 style="margin-top:50px">This Portfolio</h2>
+            <h2 style="margin-top:50px">This Website</h2>
             <p>
                 I made this entire site from scratch for COMM1310 in my final semester with Niagara College with HTML
                 and CSS with
