Fixed wording on 'Portfolio', fixed broken link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     building everything from SQLS data warehouses to complex point-of-sale systems.
                     Some of the projects I'm most proud of, or even just had the most fun working on, can be found
                     in the
-                    <a href="portfolio.html">Work</a> section of this site or on my GitHub page at
+                    <a href="#" id="btnPortfolio">Portfolio</a> section of this site or on my GitHub page at
                     <a href="https://github.com/Hare-J" target="_blank">Hare-J</a>.
                 </p>
                 <p>
@@ -140,7 +140,7 @@
 
     <!-- BEGIN PORTFOLIO -->
     <div class="content portfolio-page" id="portfolio-page">
-        <h1 class="text-center">My Work</h1>
+        <h1 class="text-center">Portfolio</h1>
 
         <!-- tcp/ip client server  -->
         <div class="row">
@@ -190,7 +190,7 @@
                 responsive, modern web pages.
             </p>
             <p>
-                <b>Skills used:</b> UX design, HTML/CSS
+                <b>Skills used:</b> UX design, HTML/CSS, Javascript
             </p>
             <p>You can find the source code for this project in its <a href="https://github.com/Hare-J/Hare-J.github.io"
                     target="_blank">GitHub repository</a>.</p>
