rem broken scroll functionality -> About Portfolio

--- a/index.html
+++ b/index.html
@@ -77,14 +77,11 @@
                     building everything from SQLS data warehouses to complex point-of-sale systems.
                     Some of the projects I'm most proud of, or even just had the most fun working on, can be found
                     in the
-                    <a href="#" id="btnPortfolio">Portfolio</a> section of this site or on my GitHub page at
+                    Portfolio section of this site or on my GitHub page at
                     <a href="https://github.com/Hare-J" target="_blank">Hare-J</a>.
                 </p>
                 <p>
-                    I am extremely passionate about building quality software following solid object-oriented design
-                    for
-                    ease of future use
-                    and development.
+                    I am extremely passionate about building robust, quality software following good object-oriented design.
                 </p>
 
                 <p></p>
