fixed wording on intro about me

--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
         <div class="row">
             <div class="col-sm-6">
                 <p>
-                    My name is James and I am a full-stack software developer in Welland and graduate of
-                    Niagara College's Computer Programmer Analyst program.
+                    My name is James and I am a full-stack programmer in Welland, Ontario. I graduated from Niagara
+                    College’s Computer Programmer Analyst advanced diploma program in December 2022, maintaining Honours
+                    Status in four of the five semesters completed while peer tutoring on the side as often as I could.
                 </p>
                 <p>
-                    I have a wide variety of experience in all areas of software development, as both an individual
+                    I have a wide variety of experience in many areas of software development, as both an individual
                     and a team member,
                     building everything from SQLS data warehouses to complex point-of-sale systems.
                     Some of the projects I'm most proud of, or even just had the most fun working on, can be found
