fixed punctuation, added missing alts to imgs

--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
 
                 <div class="row">
                     <div class="col-sm-8">
-                        <img src="res/cg-home.png" width="100%" style="padding-top: 15px">
+                        <img src="res/cg-home.png" width="100%" alt="an image of the Canada Games Management home page"
+                            style="padding-top: 15px">
                     </div>
                     <div class="col-sm-4 text-center">
                         <i>img 1. Canada Games landing page.</i>
@@ -243,7 +244,8 @@
 
                 <div class="row">
                     <div class="col-sm-8">
-                        <img src="res/cg-login.png" width="100%" style="padding-top: 15px">
+                        <img src="res/cg-login.png" width="100%"
+                            alt="an image of the Canada Games Management login page" style="padding-top: 15px">
                     </div>
                     <div class="col-sm-4">
                         <i>img 2. Canada Games login page.</i>
@@ -252,7 +254,9 @@
 
                 <div class="row">
                     <div class="col-sm-8">
-                        <img src="res/cg-athletes.png" width="100%" style="padding-top: 15px">
+                        <img src="res/cg-athletes.png" width="100%"
+                            alt="an image of the Canada Games Management athletes list with filtering opened"
+                            style="padding-top: 15px">
                     </div>
                     <div class="col-sm-4">
                         <i>img 3. Canada Games athlete register with search/filter window open.</i>
@@ -317,7 +321,7 @@
                     for their database.
                 </p>
                 <p>
-                    <b>Skills used:</b> C# MVC, UX design, Teamwork, Communication,
+                    <b>Skills used:</b> C# MVC, UX design, Teamwork, Communication
                 </p>
                 <img src="res/grow-dashboard.png" alt="image of a point of sales dashboard"
                     class="rounded mx-auto d-block" style="width:50%; height:auto; padding-top: 20px;">
