added typing intro effect and timed splash fadein

--- a/index.html
+++ b/index.html
@@ -33,28 +33,30 @@
 <body>
     <!-- BEGIN INTRO SPLASH -->
     <div class="content intro-card fill-div">
-        <div class="fade-in intro-content">
-            <h1 class="text-center" style="font-size:60px;margin-top:12%">James Hare</h1>
-            <h2 class="text-center">Computer Programmer Analyst</h2>
+        <div class="intro-content">
 
-            <div class="row" style="font-size: 21px;padding-top:4%;">
-                <div class="col-sm-4"></div>
-                <div class="col-sm-2 text-center">
-                    <!-- <a href="portfolio.html">My Work</a> -->
-                    <button id="btnAbout">About Me</button>
+            <h1 class="text-center" id="introName" style="font-size:60px;margin-top:12%;color:#ffffff"></h1>
+            <h2 class="text-center" id="introTitle" style="color:#ffffff">boo</h2>
+            <div class="fade-in" id="fadeIn">
+                <div class="row" style="font-size: 21px;padding-top:4%;">
+                    <div class="col-sm-4"></div>
+                    <div class="col-sm-2 text-center">
+                        <!-- <a href="portfolio.html">My Work</a> -->
+                        <button id="btnAbout">About Me</button>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <!-- <a href="about.html">About Me</a> -->
+                        <button id="btnPortfolio">Portfolio</button>
+                    </div>
+                    <div class="col-sm-4"></div>
                 </div>
-                <div class="col-sm-2 text-center">
-                    <!-- <a href="about.html">About Me</a> -->
-                    <button id="btnPortfolio">Portfolio</button>
+                <div class="row" style="font-size: 21px; padding-top:4%;">
+                    <div class="col-sm-5"></div>
+                    <div class="col-sm-2 text-center">
+                        <a href="res/JHare - Resume.pdf" target="_blank">My Resume</a>
+                    </div>
+                    <div class="col-sm-5"></div>
                 </div>
-                <div class="col-sm-4"></div>
-            </div>
-            <div class="row" style="font-size: 21px; padding-top:4%;">
-                <div class="col-sm-5"></div>
-                <div class="col-sm-2 text-center">
-                    <a href="res/JHare - Resume.pdf" target="_blank">My Resume</a>
-                </div>
-                <div class="col-sm-5"></div>
             </div>
         </div>
     </div>
