added skills section

--- a/index.html
+++ b/index.html
@@ -39,16 +39,20 @@
             <h2 class="text-center" id="introTitle" style="color:#ffffff">boo</h2>
             <div class="fade-in" id="fadeIn">
                 <div class="row" style="font-size: 21px;padding-top:4%;">
-                    <div class="col-sm-4"></div>
+                    <div class="col-sm-3"></div>
                     <div class="col-sm-2 text-center">
                         <!-- <a href="portfolio.html">My Work</a> -->
                         <button id="btnAbout">About Me</button>
                     </div>
                     <div class="col-sm-2 text-center">
                         <!-- <a href="about.html">About Me</a> -->
+                        <button id="btnSkills">Skills</button>
+                    </div>
+                    <div class="col-sm-2 text-center">
+                        <!-- <a href="about.html">About Me</a> -->
                         <button id="btnPortfolio">Portfolio</button>
                     </div>
-                    <div class="col-sm-4"></div>
+                    <div class="col-sm-3"></div>
                 </div>
                 <div class="row" style="font-size: 21px; padding-top:4%;">
                     <div class="col-sm-5"></div>
@@ -135,6 +139,78 @@
         </div>
     </div>
     <!-- END ABOUT ME -->
+
+    <!-- BEGIN SKILLS -->
+    <div class="content skills-page" id="skills-page">
+        <h1 class="text-center">Skills</h1>
+
+        <div class="row">
+            <div class="col-sm-4">
+                <h2>Languages</h2>
+                <ul>
+                    <li>Bash</li>
+                    <li>C#</li>
+                    <li>HTML/CSS</li>
+                    <li>Java</li>
+                    <li>Javascript</li>
+                    <li>PowerShell</li>
+                    <li>Python</li>
+                </ul>
+                <h2>Database</h2>
+                <ul>
+                    <li>Apache Hive</li>
+                    <li>Apache Spark</li>
+                    <li>Hadoop</li>
+                    <li>MongoDB</li>
+                    <li>SQL & SQLite</li>
+                    <li>SSIS</li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <h2>Frameworks & Design Patterns</h2>
+                <ul>
+                    <li>.NET Core</li>
+                    <li>ASP.NET Web API</li>
+                    <li>Bootstrap</li>
+                    <li>MAUI.NET / Xamarin Forms</li>
+                    <li>Model-View-Controller</li>
+                    <li>Model-View-ViewModel</li>
+                    <li>Swagger</li>
+                    <li>Universal Windows Platform</li>
+                </ul>
+                <h2>Communication</h2>
+                <ul>
+                    <li>Cisco Webex</li>
+                    <li>Discord</li>
+                    <li>Microsoft Teams</li>
+                    <li>Zoom</li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <h2>IDEs & Editors</h2>
+                <ul>
+                    <li>Android Studio</li>
+                    <li>Eclipse</li>
+                    <li>Jupyter Notebooks</li>
+                    <li>SQL Server Management Studio 18</li>
+                    <li>Sublime</li>
+                    <li>Visual Studio 2019 & 2022</li>
+                    <li>Visual Studio Code</li>
+                </ul>
+                <h2>Platforms</h2>
+                <ul>
+                    <li>Fedora</li>
+                    <li>Ubuntu</li>
+                    <li>Windows</li>
+                </ul>
+                <h2>Version Control</h2>
+                <ul>
+                    <li>GitHub</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- END SKILLS -->
 
     <!-- BEGIN PORTFOLIO -->
     <div class="content portfolio-page" id="portfolio-page">
@@ -330,6 +406,8 @@
             </div>
             <!-- END PORTFOLIO-->
 
+            <footer>
+                <hr><small>James Hare - 2023</small></footer>
             <script src="scripts/app.js"></script>
 </body>
 
