fixed wording on "This Website"

--- a/index.html
+++ b/index.html
@@ -272,15 +272,10 @@
             <div class="collapse" id="portThisSite">
                 <br>
                 <p>
-                    I made this entire site from scratch for COMM1310 in my final semester with Niagara College with
-                    HTML
-                    and CSS with
-                    Bootstrap. I didn't have much experience with web design before this project,
-                    having
-                    worked mainly with
-                    MVC views and razor code in C#, but this seemed like a great opportunity to get some more
-                    experience creating
-                    responsive, modern web pages.
+                    I made this entire site from scratch for COMM1310 in my final semester at Niagara College using
+                    plain old HTML, CSS, Javascript and a bit of help from Bootstrap. I didn't have much experience with
+                    web design when I started this project, and the initial design was a bit clunkier than what it is
+                    today, but it's made for a fun project to build on over time. 
                 </p>
                 <p>
                     <b>Skills used:</b> HTML/CSS, Javascript, Bootstrap, UX design
